// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        Object {
          "paddingHorizontal": 0,
        },
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  />
</View>
`;

exports[`<Button> when {accent} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#f69a37",
        },
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {activity} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#ffffff"
      hidesWhenStopped={true}
      size="small"
      style={
        Array [
          undefined,
          false,
        ]
      }
      type="small"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "marginLeft": 10,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {children} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            Object {
              "fontWeight": "bold",
            },
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            false,
            Object {
              "fontSize": 20,
              "lineHeight": 26,
            },
            false,
            false,
            false,
            false,
            false,
            Object {},
          ]
        }
      >
        10
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            false,
            Object {
              "fontSize": 20,
              "lineHeight": 26,
            },
            false,
            false,
            false,
            false,
            false,
            Object {
              "transform": Array [
                Object {
                  "scale": 0.8,
                },
              ],
            },
          ]
        }
      >
        €
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Button> when {color} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "red",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {contained} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {disabled} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        Object {
          "opacity": 0.5,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {icon} & {title} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "marginLeft": 10,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {icon} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        Object {
          "paddingHorizontal": 0,
        },
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={1}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          undefined,
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Button> when {outlined} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "borderWidth": 1,
        },
        Object {
          "borderColor": "#9b9b9b",
        },
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {primary} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#10c0bc",
        },
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {responsive} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "lineHeight": 16.8,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {rounded} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 22.5,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        Object {
          "borderRadius": 22.5,
        },
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {small} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        Object {
          "height": 30,
          "minWidth": 30,
          "paddingHorizontal": 15,
        },
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 12,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {style} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0,255,0,0.25)",
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;

exports[`<Button> when {title} 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 3,
      "marginHorizontal": 5,
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 3,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 45,
          "minWidth": 45,
          "paddingHorizontal": 30,
        },
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "#9b9b9b",
        },
        false,
        false,
        false,
        false,
        false,
        false,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          Object {
            "fontWeight": "600",
          },
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          Object {
            "color": "#ffffff",
            "fontSize": 14,
          },
        ]
      }
    >
      Press me
    </Text>
  </View>
</View>
`;
